--- a/meta/authors.yml
+++ b/meta/authors.yml
@@ -1,6 +1,5 @@
 authors:
-  - slug: wutali
-    name: Takahiro Fujiwara
+  - slug: fitzsimmons
+    name: Joe Fitzsimmons
     introduction:
-      Co-founder and CTO at Fuller, Inc. / Software & Data Engineer /
-      Python / Golang / React
+      This is my website
