--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -122,9 +122,14 @@ collections:
       - label: "Slug"
         name: "slug"
         widget: "string"
+        hint: "Ex: 2021-07-08_this-is-the-title"
       - label: "Title"
         name: "title"
         widget: "string"
+      - label: "Description"
+        name: "description"
+        required: false
+        widget: "text"
       - label: "Publish Date"
         name: "date"
         widget: "datetime"
@@ -193,7 +198,7 @@ collections:
                       multiple: true
                 - {label: Body, name: body, widget: markdown}
                 - {label: Summary, name: summary, required: false, widget: text}
-                - label: Caegory
+                - label: Category
                   name: "category"
                   widget: relation
                   collection: "meta"
