--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -88,6 +88,17 @@ collections:
                 name: "name"
                 widget: "string"
                 hint: "Tag name for displaying on the site"
+              - label: "Parent Category"
+                name: "parent"
+                widget: relation
+                collection: "meta"
+                file: "categories"
+                required: false
+                searchFields:
+                    - "categories.*.name"
+                displayFields:
+                    - "categories.*.name"
+                valueField: "categories.*.slug"
       - name: "categories"
         label: "Categories"
         file: "meta/categories.yml"
@@ -106,6 +117,11 @@ collections:
                 name: "name"
                 widget: "string"
                 hint: "Category name for displaying on the site"
+              - label: "Color Hexcode"
+                name: "color"
+                widget: "string"
+                hint: "Color associated with category's style"
+                required: false
 
   - name: "posts" #post need a category lke image, code snippet, footnote, etc...
     label: "Posts"
