removed articles, consolidated lists, meta

--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
   "base_url": "https://eager-almeida-4ef36f.netlify.app",
-  "site_title": "Next.js Netlify Blog",
-  "site_description": "Next.js blog template for Netlify",
+  "site_title": "Insincere Engineer",
+  "site_description": "A website so novel, it's arguably a complete waste of time!",
   "site_keywords": [
     {
       "keyword": "Next.js"
