added tags, and chrome fixes.  THAT'S RIGHT! CHROME FIXES!!!

--- a/meta/tags.yml
+++ b/meta/tags.yml
@@ -35,3 +35,12 @@ tags:
   - slug: creative-code
     name: creative-code
     parent: code
+  - slug: wordpress
+    name: WordPress
+    parent: code
+  - slug: jamstack
+    name: JAMstack
+    parent: code
+  - slug: vue
+    name: Vue
+    parent: code
