--- a/config.json
+++ b/config.json
@@ -14,6 +14,7 @@
     }
   ],
   "posts_per_page": 5,
+  "refs_per_page": 12,
   "twitter_account": "@my-account",
   "github_account": "jfitzsimmons"
 }
