style2, layout2, codepen

--- a/config.json
+++ b/config.json
@@ -15,6 +15,6 @@
   ],
   "posts_per_page": 5,
   "refs_per_page": 12,
-  "twitter_account": "@my-account",
+  "codepen_account": "jfitzsimmons",
   "github_account": "jfitzsimmons"
 }
