--- a/content/posts/2021-07-08_i-love-coheed-and-cambria-and-i-dont-care-who-knows-it.json
+++ b/content/posts/2021-07-08_i-love-coheed-and-cambria-and-i-dont-care-who-knows-it.json
@@ -13,7 +13,7 @@
       "type": "newChapter",
       "section": {
         "chapterTitle": "Coheed and Cambria perform Mother Superior inside a shoe repair shop.",
-        "body": "<p>I've never been much for Star Wars.  I saw The Phantom Menace and Jar Jar Binks and never felt strongly of either.  I never once thought about harassing a child actor until they gave up on their dreams.  What fulfills my inner infant is Coheed and Cambria and if you feel otherwise I will harass your first born into the second-coming of Kafka.</p>  \n\n<p>They are a blend of Prog Rock, English Folk and Power Pop.  They are often compared to Rush.  Rush rocks.  I don't take pride in their libertarianism or an association with basement dwellers, but I have dwelled, and I love Sci-fi concepts.</p> \n\n<p>Coheed is my Star Wars.</p>\n\n<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/Gj-M4iU6ckU\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>",
+        "body": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut est id ante faucibus sollicitudin. Praesent blandit turpis dui, non vestibulum felis cursus eget. Praesent et velit fermentum, lacinia nunc eu, ullamcorper erat. Suspendisse dapibus quam eget suscipit tempor. Vestibulum id accumsan ante. Nullam interdum et velit et efficitur. Phasellus dignissim tortor magna, ac tempus arcu malesuada sed. Duis auctor tortor lacus, vitae pharetra mi dignissim nec. In auctor viverra augue ac scelerisque.</p><p>Donec blandit mattis tortor ut pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus congue nunc at sapien euismod facilisis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur magna quam, bibendum et ornare vel, mattis sit amet ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>\n\n<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/Gj-M4iU6ckU\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>",
         "summary": "Coheed is my Star Wars.",
         "tags": [
           "rock",
@@ -26,7 +26,7 @@
       "type": "newChapter",
       "section": {
         "chapterTitle": "A Favor House Atlantic - Vitamin String Quartet Tribute to Coheed and Cambria",
-        "body": "<p>Going down the rabbit hole of invasive, technocratic targeting, I was delivered a circus from god Google.  It's pretty great.  I'm a sucker for all things strings so here enters Vitamin String Quartet, \"A classical crossover force in contemporary music.\"</p>\n\n<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/BfSh4unhD4g\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>",
+        "body": "<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ut est id ante faucibus sollicitudin. Praesent blandit turpis dui, non vestibulum felis cursus eget. Praesent et velit fermentum, lacinia nunc eu, ullamcorper erat. Suspendisse dapibus quam eget suscipit tempor. Vestibulum id accumsan ante. Nullam interdum et velit et efficitur. Phasellus dignissim tortor magna, ac tempus arcu malesuada sed. Duis auctor tortor lacus, vitae pharetra mi dignissim nec. In auctor viverra augue ac scelerisque.</p><p>Donec blandit mattis tortor ut pharetra. Interdum et malesuada fames ac ante ipsum primis in faucibus. Phasellus congue nunc at sapien euismod facilisis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur magna quam, bibendum et ornare vel, mattis sit amet ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae;</p>\n\n<iframe width=\"560\" height=\"315\" src=\"https://www.youtube-nocookie.com/embed/BfSh4unhD4g\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>",
         "summary": "I'm a sucker for all things strings.",
         "tags": [
           "orchestral",
@@ -36,7 +36,7 @@
       }
     }
   ],
-  "description": "I came across a video that helped ease my cynicism and combated my disdain for nostalgia.",
+  "description": "I came across a video.",
   "title": "I love Coheed and Cambria and I don't care who knows.",
   "slug": "2021-07-08_i-love-coheed-and-cambria-and-i-dont-care-who-knows-it"
 }
