--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "export": "next build && next export -o ./dist",
-    "test": "jest"
+    "test": "jest",
+    "lint": "next lint"
   },
   "dependencies": {
     "@mapbox/rehype-prism": "^0.8.0",
@@ -31,9 +32,15 @@
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
     "@types/react": "18.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.57.1",
+    "@typescript-eslint/parser": "^5.57.1",
+    "eslint": "^8.37.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-next": "13.2.4",
+    "eslint-config-prettier": "^8.8.0",
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
-    "typescript": "^4.4.4",
+    "typescript": "^5.0.3",
     "yaml-loader": "^0.6.0"
   }
 }
