--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -45,6 +45,7 @@
     ],
     "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "error",
-    "object-curly-newline": "off"
+    "object-curly-newline": "off",
+    "jsx-a11y/anchor-is-valid": 0
   }
 }
