--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "schema-dts": "^1.0.0"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^4.33.0",
     "@types/jest": "^27.0.2",
     "@types/node": "^16.11.7",
     "@types/react": "18.0.1",
