--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^2.25.0",
     "gray-matter": "^4.0.3",
     "js-yaml": "^4.1.0",
+    "netlify-cli": "^13.2.2",
     "next": "12.1.0",
     "next-mdx-remote": "^4.2.0",
     "normalize.css": "^8.0.1",
